Fixes slim artist text & padding on mobile

--- a/src/app/components/artists/artists.component.scss
+++ b/src/app/components/artists/artists.component.scss
@@ -6,6 +6,8 @@
 		}
 
 		.right {
+			line-height: 30px;
+
 			.socials__container {
 				display: flex;
 				justify-content: center;
