--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,4 +53,11 @@ button:focus {
 }
 
 
+@media screen and (max-width: 1366px) {
+	.p-5 {
+		padding: 0 !important;
+	}
+}
+
+
 
